# OLD_PROJECT

./: README.md  index.html  params.json
Y.NET/: 1  click_analiz.py  click_result.py  create_key_db.py  create_nn_db.py  key.db  nn.db  nn.py  test.py
Y.NET.MYSQL/: 1  click_analiz.py  click_result.py  create_key_db.py  create_nn_db.py  nn.py
amqp/: publish.py
bot/: bot.py  stark.py  std-startup.xml
bot/aliceaaa/: Atomic.aiml  Music.aiml  RUS_ICQ.aiml
bot/dialog/: self-test.aiml  test.aiml
bot/pymorphy/: runtests.sh  setup.cfg  tox.ini  update_speedups.sh
bot/stark/: cerebro.brn  stark.py  startup.xml  std-startup.xml
cat/2009/: About.aspx  About.aspx.designer.cs  Catalog.Master  Catalog.Master.cs  CatalogAddLink.aspx  CatalogAddLink.aspx.cs  CatalogContents.aspx.designer.cs  CatalogDetails.aspx.cs  CatalogSearch.aspx  CatalogSearch.aspx.cs  CheckImageGenerator.ashx.cs  Settings.aspx  Settings.aspx.designer.cs  SitemapGenerator.aspx  SitemapGenerator.aspx.designer.cs  Web.sitemap  YottosCatalog.csproj  YottosCatalog.dbml.cs  YottosCatalog.designer.cs  YottosCatalogUrlMappings.dbml
cat/2011/: About.aspx.cs  Catalog.Master  Catalog.Master.designer.cs  CatalogAddLink.aspx  CatalogAddLink.aspx.cs  CatalogAddLink.aspx.designer.cs  CatalogContents.aspx  CatalogContents.aspx.cs  CatalogDetails.aspx  CatalogDetails.aspx.designer.cs  CatalogLinkPosted.aspx  CatalogLinkPosted.aspx.cs  CatalogLinkPosted.aspx.designer.cs  CatalogList.aspx  CatalogList.aspx.cs  CatalogList.aspx.designer.cs  CatalogSearch.aspx  CatalogSearch.aspx.designer.cs  CatalogSiteMapProvider.cs  CheckImageGenerator.ashx  Global.asax  Global.asax.cs  Settings.aspx.cs  SitemapGenerator.aspx.cs  Web.config  YottosCatalog.dbml  YottosCatalog.dbml.layout  YottosCatalogUrlMappings.dbml.layout  YottosCatalogUrlMappings.designer.cs
cat/2013/: MANIFEST.in  README.txt  celeryconfig.py  deploy.ini  development.ini  setup.cfg  setup.py  test.ini  who.ini
get/1.0/: cgi_wrapper.py  deploy.ini  development.ini  redirect.py
get/2.0/: celeryconfig.py  deploy.ini  development.ini  setup.py
get/2010.01/: Captcha.ashx  Default.Master  Default.Master.cs  Default.Master.designer.cs  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  GetMyAd.csproj  Login.aspx  Login.aspx.cs  Login.aspx.designer.cs  Logout.ashx  Logout.ashx.cs  Redirect.ashx  Register.aspx  Register.aspx.cs  Report.aspx  Report.aspx.cs  Report.aspx.designer.cs  ReportSummary.ashx  ReportSummary.ashx.cs  Rules1.aspx  Rules1.aspx.cs  Rules1.aspx.designer.cs  Rules2.aspx  Rules2.aspx.cs  Rules2.aspx.designer.cs  sendstats.ashx  web.config.copy
get/2010.05.RC1/: README.txt  deploy.ini  test.ini
get/2010.05.RC2/: deploy.ini  development.ini  setup.cfg  setup.py
get/2010.11/: MANIFEST.in  celeryconfig.py  development.ini  getmyad.wsgi  redirect.py  test.ini
get/association-network/: assoc_parser_cicle.py  associations_db.sql
help/1.0/: MANIFEST.in  README.txt  deploy.ini  development.ini  help.wsgi  setup.cfg  setup.py  test.ini
pars-yml/: MANIFEST.in  README.txt  celeryconfig.py  deploy.ini  development.ini  repoze.ini  setup.cfg  setup.py  test.ini
pars-yml/ParserYML.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pars-yml/docs/: index.txt
pars-yml/parseryml/: websetup.py
rek/1.0/cpp/: CMakeLists.txt  README
rek/1.0/cpp/src/: Campaign.cpp  Campaign.h  CampaignShowOptions.h  CgiService.cpp  CgiService.h  Core.cpp  Core.h  Informer.cpp  Informer.h  InformerTemplate.h  Offer.cpp  Offer.h  RandomEntity.h  Rules.cpp  Rules.h  main.cpp
rek/1.0/cpp/src/utils/: UrlParser.cpp  benchmark.h
rek/2013/tracking-worker/: CMakeLists.txt
rek/2013/tracking-worker/src/: CgiService.cpp  CgiService.h  Core.cpp  Core.h  DB.cpp  InformerTemplate.cpp  InformerTemplate.h  Params.h  main.cpp
rek/2013/tracking-worker/src/utils/: Cookie.cpp  UrlParser.cpp  UrlParser.h
rek/2013/worker/: CMakeLists.txt
rek/2013/worker/src/: Campaign.cpp  Campaign.h  CampaignShowOptions.cpp  CampaignShowOptions.h  CgiService.cpp  CgiService.h  Core.cpp  Core.h  DB.h  HistoryManager.cpp  HistoryManager.h  Informer.cpp  Informer.h  InformerTemplate.cpp  InformerTemplate.h  Offer.cpp  Offer.h  Params.h  RandomEntity.cpp  RandomEntity.h  Rules.cpp  Rules.h  UserHistory.cpp  UserHistory.h  main.cpp  pch.h
rek/2013/worker/src/DBAccessor/: DBConnectionParams.h  DBWrapper.h  redisclient.h
rek/2013/worker/src/FullTextSearcher/: SearcherWrapper.cpp  SearcherWrapper.h  XXXSearcher.cpp  XXXSearcher.h
rek/2013/worker/src/utils/: Comparators.h  GeoIPTools.cpp  GeoIPTools.h  SearchEngines.cpp  SearchEngines.h  UrlParser.cpp  base64.cpp  base64.h  benchmark.h
rek/2013/worker/tests/: test_campaign.cpp  test_cgiService.cpp  test_core.cpp  test_db.cpp  test_informer.cpp  test_main.cpp  test_offer.cpp  test_randomEntity.cpp  test_rules.cpp  test_utils.cpp
rek/5.0/keywords-indexcreator/: CMakeLists.txt
rek/5.0/keywords-indexcreator/src/: Core.cpp  Core.h  DB.h  IndexCreatorService.cpp  IndexCreatorService.h  OfferKeywords.h  main.cpp
rek/6.0/gworker/: CMakeLists.txt
rek/6.0/gworker/src/utils/: UrlParser.h
rek/7.0/worker-first-frame/: CMakeLists.txt
rek/7.0/worker-first-frame/src/: CgiService.cpp  CgiService.h  Core.cpp  Core.h  FrameTemplate.cpp  FrameTemplate.h  Informer.cpp  Informer.h  Params.h  main.cpp
rek/7.0/worker-first-frame/src/utils/: UrlParser.cpp  UrlParser.h
rek/7.0/worker-first-frame/tests/: test_db.cpp  test_randomEntity.cpp
rg_apache_log_analizator/: parse.py  test
ry/trunk-manag/: fabfile.py  passwd  setup.py  test.ini  test.py
ry/trunk-ry/: README.txt  celeryconfig.py  test.ini
search/: example1.py  test.py
search/parser/: browser.py  google.py
search/xgoogle/: search.py
sphinx/: sphinx_driver.py  sphinx_test.py
sud/SuggestLib/: SuggestLib.pri
sud/SuggestLibTest/: SuggestLibTest.pro
sud/TrieLib/: TrieBuilder.cpp  TrieBuilder.h  TrieBuilder_impl.cpp  (+7 more)
topic-redis/: site_topic_redis_created.py
tree/: .t1.swp  click_inf.txt  click_to_txt.py  clicks.txt  decision_tree_example.txt  t1  treepredict.py
(+1502 files in other folders)
